[Java Runtime Sandbox] Activated!